<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="fragment.StreamCreateFragment">

    <LinearLayout
        android:id="@+id/streamStopForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="#64000000">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Stop streaming?"
            android:id="@+id/stopStreamConfirmationText"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/confirmStopStreamButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:layout_weight="1"
                android:textColor="#ffffff" />

            <View
                android:layout_height="match_parent"
                android:layout_width="1dp"
                android:background="@android:color/darker_gray"/>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/cancelStopStreamButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="No"
                android:layout_weight="1"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/streamCreateForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:background="#64000000">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Create your stream"
                android:id="@+id/textView"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#ffffff"
                android:layout_alignParentStart="true"
                android:textAlignment="center" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/titleWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FFE0E0E0">

                <EditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:hint="Title"
                    android:textColor="#ffffff"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/descriptionWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FFE0E0E0">

                <EditText
                    android:id="@+id/descriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="Write a description"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentStart="true" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="false"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/cancelStreamButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:layout_weight="1"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/createStreamButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Stream"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
