<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/streamActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.litmus.worldscope.StreamActivity">

    <fragment
        android:id="@+id/streamVideoFragment"
        android:name="fragment.StreamVideoFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|bottom"
        tools:layout="@layout/fragment_stream_video" />

    <fragment
        android:id="@+id/commentFragment"
        android:name="fragment.CommentFragment"
        android:layout_width="fill_parent"
        android:layout_height="190dip"
        android:layout_gravity="bottom"
        tools:layout="@layout/fragment_comment" />

    <fragment
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:name="fragment.TutorialFragment"
        android:id="@+id/tutorialFragment"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/streamVideoControlFragment"
        android:name="fragment.StreamVideoControlFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="60dp"
        tools:layout="@layout/fragment_stream_video_control" />

    <fragment
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:name="fragment.StickerFragment"
        android:id="@+id/stickerFragment"
        tools:layout="@layout/fragment_sticker" />

    <fragment
        android:id="@+id/streamCreateFragment"
        android:name="fragment.StreamCreateFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        tools:layout="@layout/fragment_stream_create" />

    <fragment
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:name="fragment.TitleFragment"
        android:id="@+id/titleFragment"
        android:layout_gravity="center_horizontal|top"
        tools:layout="@layout/fragment_title" />

</FrameLayout>
