<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    tools:context="fragment.CommentFragment">

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:id="@+id/commentListView"
        android:divider="#00000000"
        android:stackFromBottom="true"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:scrollbarThumbVertical="@drawable/white_scroll_style"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#64000000"
        android:weightSum="1">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/emojiButton"
            android:src="@drawable/ic_tag_faces"
            android:layout_weight="0.1"
            android:background="#00000000"
            android:layout_gravity="bottom" />

        <com.vanniktech.emoji.EmojiEditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Type a comment..."
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:layout_gravity="right|bottom"
            android:backgroundTint="#00ffffff"
            android:background="#64000000"
            android:textSize="14dp"
            android:layout_weight="0.8"
            android:padding="12dp" android:imeOptions="actionSend"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="3"
            app:emojiSize="24dp"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/send_button"
            android:src="@drawable/ic_send"
            android:layout_weight="0.1"
            android:background="#00000000"
            android:layout_gravity="bottom" />
    </LinearLayout>
</LinearLayout>