<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="fragment.StreamVideoControlFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_pause" />

</FrameLayout>
